--- a/setup-posit-bakery/action.yml
+++ b/setup-posit-bakery/action.yml
@@ -8,4 +8,5 @@ runs:
         python-version: '3.12'
     # TODO: replace with a different Package installation method
     - name: Install Posit Bakery tool
+      shell: bash
       run: pip install https://saipittwood.blob.core.windows.net/packages/posit_bakery-0.1.0-py3-none-any.whl
