--- a/posit-bakery/pyproject.toml
+++ b/posit-bakery/pyproject.toml
@@ -11,6 +11,7 @@ python = "^3.10"
 typer = "^0.12.5"
 jinja2 = "^3.1.4"
 rich = "^13.8.1"
+python-hcl2 = "^4.3.5"
 
 [tool.poetry.scripts]
 bakery = "posit_bakery.main:app"
