--- a/setup-goss/action.yml
+++ b/setup-goss/action.yml
@@ -4,6 +4,7 @@ runs:
   using: "composite"
   steps:
     - name: Make tools directory
+      shell: bash
       run: mkdir -p tools
     - name: Install goss
       shell: bash
