--- a/posit-bakery/pyproject.toml
+++ b/posit-bakery/pyproject.toml
@@ -12,6 +12,7 @@ typer = "^0.12.5"
 jinja2 = "^3.1.4"
 rich = "^13.8.1"
 python-hcl2 = "^4.3.5"
+gitpython = "^3.1.43"
 
 [tool.poetry.scripts]
 bakery = "posit_bakery.main:app"
