--- a/posit-bakery/pyproject.toml
+++ b/posit-bakery/pyproject.toml
@@ -13,6 +13,7 @@ jinja2 = "^3.1.4"
 rich = "^13.8.1"
 python-hcl2 = "^4.3.5"
 gitpython = "^3.1.43"
+tomlkit = "^0.13.2"
 
 [tool.poetry.scripts]
 bakery = "posit_bakery.main:app"
