--- a/posit-bakery/pyproject.toml
+++ b/posit-bakery/pyproject.toml
@@ -23,6 +23,7 @@ pydantic = "^2.9.2"
 ruff = "^0.7.0"
 mypy = "^1.13.0"
 pytest = "^8.3.3"
+pytest-mock = "^3.14.0"
 
 [tool.ruff]
 line-length = 120
