Prefix with poetry run

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Run tests
         working-directory: ./posit-bakery
         run: |
-          pytest -n auto \
+          poetry run pytest -n auto \
             --cov=posit_bakery \
             --cov-report=xml \
             --junit-xml=results.xml \
