--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -45,7 +45,7 @@ repos:
     -   id: ruff
         args: [ --fix ]
     -   id: ruff-format
--   repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v1.13.0
-    hooks:
-    - id: mypy
+# -   repo: https://github.com/pre-commit/mirrors-mypy
+#     rev: v1.13.0
+#     hooks:
+#     - id: mypy
