--- a/posit-bakery/justfile
+++ b/posit-bakery/justfile
@@ -18,9 +18,18 @@ build:
     poetry build \
         --directory={{ CWD }}
 
-# Test the posit-bakery python project
-test:
+[private]
+_pytest *ARGS:
     poetry run -- pytest \
         -n auto \
         --cov=posit_bakery \
+        {{ ARGS }} \
         {{ CWD }}/test/
+
+test-mark mark:
+    just _pytest -m {{ mark }}
+
+# Test the posit-bakery python project
+test:
+    just test-mark unit
+    just test-mark functional
