Run all tests by default with `just test`

--- a/posit-bakery/justfile
+++ b/posit-bakery/justfile
@@ -31,5 +31,4 @@ test-mark mark:
 
 # Test the posit-bakery python project
 test:
-    just test-mark unit
-    just test-mark functional
+    just _pytest
