Use pydantic BaseModel for all Config objects
This change moves to using BaseModel instead of a dataclass which has
several advantages for validation

- Built-in validation
- Default values can be set on the class attr
- We can add custom validators

We also add a new ConfigDocument class that represents the TOML document
itself.

Additionally, we also change the entities stored as a Set to a List.
De-duplication is handled by a field validator.

--- a/posit-bakery/test/pytest.ini
+++ b/posit-bakery/test/pytest.ini
@@ -3,5 +3,8 @@
 markers =
     unit: Unit tests
     functional: Functional tests
+    config: Configuration tests
+    manifest: Manifest tests
+    toml_schema: TOML schema tests
 
 bdd_features_base_dir = features/
