--- a/posit-bakery/test/resources/basic/config.toml
+++ b/posit-bakery/test/resources/basic/config.toml
@@ -2,14 +2,6 @@
 # BAKERY CONFIG
 #######################################################################################################################
 
-[[registry]]
-host = "docker.io"
-namespace = "posit"
-
-[[registry]]
-host = "ghcr.io"
-namespace = "posit-dev"
-
 [repository]
 url = "github.com/posit-dev/images-shared"
 vendor = "Posit Software, PBC"
@@ -18,3 +10,11 @@ authors = [
     "Author 1 <author1@posit.co>",
     "Author 2 <author2@posit.co>",
 ]
+
+[[registries]]
+host = "docker.io"
+namespace = "posit"
+
+[[registries]]
+host = "ghcr.io"
+namespace = "posit-dev"
