--- a/src/pti/justfile
+++ b/src/pti/justfile
@@ -3,6 +3,13 @@
 init:
     go mod download
     go install github.com/ctrf-io/go-ctrf-json-reporter/cmd/go-ctrf-json-reporter@latest
+    go install github.com/segmentio/golines@latest
+    curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.62.2
+
+alias format := lint
+lint:
+    golines -w .
+    golangci-lint run --fix --tests=false
 
 build:
     go build -o out/ -tags test_helper main.go
