--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,6 +12,7 @@ repos:
     -   id: check-json
     -   id: check-shebang-scripts-are-executable
     -   id: check-yaml
+        exclude: "^.*goss.yaml$"
     -   id: debug-statements
     -   id: detect-aws-credentials
         args: [--allow-missing-credentials]
@@ -49,3 +50,12 @@ repos:
 #     rev: v1.13.0
 #     hooks:
 #     - id: mypy
+-   repo: local
+    hooks:
+    -   id: just-go-lint
+        name: run golang linting and formatting
+        description: "Runs golangci-lint and golines using just"
+        entry: just src/pti/lint
+        language: golang
+        types: [go]
+        pass_filenames: false
