--- a/.github/workflows/lint_go.yml
+++ b/.github/workflows/lint_go.yml
@@ -40,7 +40,9 @@ jobs:
           go-version: '1.23'
 
       - name: Install golines
-        run: go install github.com/segmentio/golines@latest
+        run: |
+          go install mvdan.cc/gofumpt@v0.7.0
+          go install github.com/segmentio/golines@v0.12.2
 
       # This is done in a silly way since golines doesn't have a way to return a non-zero exit code for formatting alone
       - name: Run golines
