--- a/posit-bakery/test/pytest.ini
+++ b/posit-bakery/test/pytest.ini
@@ -5,6 +5,7 @@ markers =
     functional: Functional tests
     config: Configuration tests
     manifest: Manifest tests
+    goss: Goss configuation tests
     toml_schema: TOML schema tests
 
 bdd_features_base_dir = features/
