Refactor Config* models into models/config subdirectory

--- a/posit-bakery/test/pytest.ini
+++ b/posit-bakery/test/pytest.ini
@@ -6,6 +6,6 @@ markers =
     config: Configuration tests
     manifest: Manifest tests
     goss: Goss configuation tests
-    toml_schema: TOML schema tests
+    schema: TOML schema tests
 
 bdd_features_base_dir = features/
