Refactor project.py into models/project subdirectory

--- a/posit-bakery/test/pytest.ini
+++ b/posit-bakery/test/pytest.ini
@@ -3,6 +3,7 @@
 markers =
     unit: Unit tests
     functional: Functional tests
+    project: Bakery Project tests
     config: Configuration tests
     manifest: Manifest tests
     goss: Goss configuation tests
