--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -43,7 +43,7 @@ jobs:
       - name: Build
         working-directory: ./posit-bakery
         run: |
-          poetry build --clean
+          poetry build
 
       - name: Upload snapshot artifacts
         if: github.event_name == 'pull_request'
@@ -53,3 +53,16 @@ jobs:
           path: ./posit-bakery/dist
           retention-days: 7
           overwrite: true
+
+      - name: Create a release draft
+        if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          gh release create ${{ github.ref_name }} \
+            --draft \
+            --generate-notes \
+            --latest
+          gh release upload ${{ github.ref_name }} \
+            --clobber \
+            ./dist/*
