Add new load method for reading manifest/config
Rename the current load method to `_load`

This allows us to iteratively move test cases over to the new load
method while allowing the current tests to continue to pass

--- a/posit-bakery/test/pytest.ini
+++ b/posit-bakery/test/pytest.ini
@@ -8,5 +8,6 @@ markers =
     manifest: Manifest tests
     goss: Goss configuation tests
     schema: TOML schema tests
+    image: Image tests
 
 bdd_features_base_dir = features/
