Add BakePlan object and initial basic test cases

--- a/posit-bakery/test/pytest.ini
+++ b/posit-bakery/test/pytest.ini
@@ -7,6 +7,7 @@ markers =
     config: Configuration tests
     manifest: Manifest tests
     goss: Goss configuation tests
+    bake: Docker buildx bake tests
     schema: TOML schema tests
     image: Image tests
 
