Show uncovered lines when running pytest locally
Add --cov-report=term-missing to `just test`

The GitHub Actions workflow uses poetry directly and does not invoke the
justfile.

--- a/posit-bakery/justfile
+++ b/posit-bakery/justfile
@@ -38,6 +38,7 @@ _pytest *ARGS:
     poetry run -- pytest \
         -n auto \
         --cov=posit_bakery \
+        --cov-report=term-missing \
         {{ ARGS }} \
         {{ CWD }}/test/
 
