Add functional test for bakery build and dgoss
- Add a `slow` pytest marker and skip by default in justfile
- Add a reset() method to BakeryCommand to allow us to invoke the
  command multiple times using the same test fixtures
- Install goss and dgoss for GitHub Actions

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,6 +19,9 @@ jobs:
         with:
           python-version: '3.12'
 
+      - name: Install goss and dgoss
+        uses: ./setup-goss
+
       - name: Install dependencies
         working-directory: ./posit-bakery
         run: |
@@ -28,6 +31,8 @@ jobs:
       - name: Run tests
         working-directory: ./posit-bakery
         run: |
+          GOSS_PATH=${GITHUB_WORKSPACE}/tools/goss \
+          DGOSS_PATH=${GITHUB_WORKSPACE}/tools/dgoss \
           poetry run pytest -n auto \
             --cov=posit_bakery \
             --cov-report=xml \
