--- a/posit-bakery/test/pytest.ini
+++ b/posit-bakery/test/pytest.ini
@@ -1,8 +1,11 @@
 [pytest]
 
+log_level = INFO
+
 markers =
     unit: Unit tests
     functional: Functional tests
+    slow: Tests that take a while to run
     project: Bakery Project tests
     config: Configuration tests
     manifest: Manifest tests
