--- a/posit-bakery/pyproject.toml
+++ b/posit-bakery/pyproject.toml
@@ -31,6 +31,7 @@ python-hcl2 = "^4.3.5"
 gitpython = "^3.1.43"
 tomlkit = "^0.13.2"
 pydantic = "^2.9.2"
+packaging = "^24.2"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.7.0"
