--- a/posit-bakery/pyproject.toml
+++ b/posit-bakery/pyproject.toml
@@ -1,4 +1,4 @@
-[tool.poetry]
+[project]
 name = "posit-bakery"
 version = "0.0.0"
 description = "Tools for extracting and manipulating bake artifacts for various commands"
@@ -6,21 +6,20 @@ authors = ["Ian H. Pittwood <ian.pittwood@posit.co>", "Ben Schwedler <ben@posit.
 license = "MIT"
 readme = "README.md"
 
-[tool.poetry.scripts]
-bakery = "posit_bakery.main:app"
+requires-python = ">=3.10"
+dependencies = [
+    "typer~=0.12.5",
+    "jinja2~=3.1.4",
+    "rich~=13.8.1",
+    "gitpython~=3.1.43",
+    "tomlkit~=0.13.2",
+    "pydantic~=2.9.2",
+    "packaging~=24.2",
+]
+dynamic = ["version"]
 
-[tool.poetry-dynamic-versioning]
-enable = true
-format-jinja = """
-{% if distance == 0 -%}
-{{ serialize_pep440(base, stage, revision) }}
-{%- elif revision is not none -%}
-{{ serialize_pep440(base, stage, revision + 1, dev=distance, metadata=[commit]) }}
-{%- else -%}
-{{ serialize_pep440(bump_version(base), stage, revision, dev=distance, metadata=[commit]) }}
-{%- endif %}
-"""
-
+[project.scripts]
+bakery = "posit_bakery.cli:app"
 
 [tool.poetry.dependencies]
 python = "^3.11"
@@ -45,7 +44,7 @@ pytest-xdist = "^3.6.1"
 [tool.ruff]
 line-length = 120
 fix = true
-target-version = "py311"
+target-version = "py310"
 
 [tool.ruff.lint]
 select = [
@@ -55,6 +54,21 @@ unfixable = [
     "T201",  # https://docs.astral.sh/ruff/rules/print/
 ]
 
+[tool.poetry.requires-plugins]
+poetry-dynamic-versioning = { version = ">=1.0.0,<2.0.0", extras = ["plugin"] }
+
+[tool.poetry-dynamic-versioning]
+enable = true
+format-jinja = """
+{% if distance == 0 -%}
+{{ serialize_pep440(base, stage, revision) }}
+{%- elif revision is not none -%}
+{{ serialize_pep440(base, stage, revision + 1, dev=distance, metadata=[commit]) }}
+{%- else -%}
+{{ serialize_pep440(bump_version(base), stage, revision, dev=distance, metadata=[commit]) }}
+{%- endif %}
+"""
+
 [build-system]
-requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
+requires = ["poetry-core>=2.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
 build-backend = "poetry_dynamic_versioning.backend"
