--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,6 +22,9 @@ jobs:
       - name: Install goss and dgoss
         uses: ./setup-goss
 
+      - name: Install Snyk CLI
+        uses: snyk/actions/setup@0.4.0
+
       - name: Install dependencies
         working-directory: ./posit-bakery
         run: |
