Mark tests, add a note

--- a/posit-bakery/test/pytest.ini
+++ b/posit-bakery/test/pytest.ini
@@ -9,9 +9,10 @@ markers =
     project: Bakery Project tests
     config: Configuration tests
     manifest: Manifest tests
-    goss: Goss configuation tests
+    goss: Goss tool tests
     bake: Docker buildx bake tests
     schema: TOML schema tests
     image: Image tests
+    snyk: Snyk tool tests
 
 bdd_features_base_dir = features/
