--- a/posit-bakery/pyproject.toml
+++ b/posit-bakery/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
     "tomlkit~=0.13.2",
     "pydantic~=2.9.2",
     "packaging~=24.2",
+    "requests (>=2.32.3,<3.0.0)",
 ]
 dynamic = ["version"]
 
