--- a/posit-bakery/pyproject.toml
+++ b/posit-bakery/pyproject.toml
@@ -11,7 +11,7 @@ maintainers = [
 license = "MIT"
 readme = "README.md"
 
-requires-python = ">=3.10"
+requires-python = "<4,>=3.10"
 dependencies = [
     "typer~=0.12.5",
     "jinja2~=3.1.4",
@@ -20,6 +20,7 @@ dependencies = [
     "tomlkit~=0.13.2",
     "pydantic~=2.9.2",
     "packaging~=24.2",
+    "python-on-whales (>=0.77.0,<0.78.0)",
 ]
 dynamic = ["version"]
 
