--- a/posit-bakery/pyproject.toml
+++ b/posit-bakery/pyproject.toml
@@ -21,6 +21,7 @@ dependencies = [
     "pydantic~=2.9.2",
     "packaging~=24.2",
     "python-on-whales (>=0.77.0,<0.78.0)",
+    "ruamel-yaml (>=0.18.14,<0.19.0)",
 ]
 dynamic = ["version"]
 
