--- a/posit-bakery/test/pytest.ini
+++ b/posit-bakery/test/pytest.ini
@@ -11,7 +11,7 @@ markers =
     manifest: Manifest tests
     goss: Goss tool tests
     bake: Docker buildx bake tests
-    schema: TOML schema tests
+    schema: YAML schema tests
     image: Image tests
     snyk: Snyk tool tests
 
