--- a/posit-bakery/pyproject.toml
+++ b/posit-bakery/pyproject.toml
@@ -17,7 +17,7 @@ dependencies = [
     "jinja2~=3.1.4",
     "rich~=13.8.1",
     "gitpython~=3.1.43",
-    "pydantic~=2.9.2",
+    "pydantic[email]~=2.9.2",
     "packaging~=24.2",
     "python-on-whales (>=0.77.0,<0.78.0)",
     "ruamel-yaml (>=0.18.14,<0.19.0)",
