Implement file tests

--- a/posit-bakery/test/testdata/unified_config/valid/complex.yaml
+++ b/posit-bakery/test/testdata/unified_config/valid/complex.yaml
@@ -51,7 +51,7 @@ images:
               - "{{ OS }}-{{ Variant.Name }}"
       - name: "std"
         options:
-          - name: goss
+          - tool: goss
             command: "some other command"
             wait: 10
     versions:
