--- a/posit-bakery/test/testdata/unified_config/valid/bare.yaml
+++ b/posit-bakery/test/testdata/unified_config/valid/bare.yaml
@@ -2,3 +2,10 @@ repository:
   url: "github.com/posit-dev/images-shared"
 images:
   - name: example
+    versions:
+      - name: "1.0.0"
+        latest: true
+        os:
+          - name: "Ubuntu 22.04"
+            primary: true
+          - name: "Ubuntu 24.04"
