Add tests for image target build

--- a/posit-bakery/test/pytest.ini
+++ b/posit-bakery/test/pytest.ini
@@ -10,6 +10,7 @@ markers =
     config: Configuration tests
     manifest: Manifest tests
     goss: Goss tool tests
+    build: Docker buildx build tests
     bake: Docker buildx bake tests
     schema: YAML schema tests
     image: Image tests
