Move VersionConstraint into versions.py
This change also adds the basic initialization of DependencyVersion

--- a/posit-bakery/test/pytest.ini
+++ b/posit-bakery/test/pytest.ini
@@ -8,6 +8,7 @@ markers =
     functional: Functional tests
     slow: Tests that take a while to run
     config: Configuration tests
+    dependency: Dependency tests
     goss: Goss tool tests
     build: Docker buildx build tests
     bake: Docker buildx bake tests
