--- a/posit-bakery/test/pytest.ini
+++ b/posit-bakery/test/pytest.ini
@@ -4,16 +4,12 @@ log_level = INFO
 
 markers =
     unit: Unit tests
+    e2e: End-to-end tests
     functional: Functional tests
     slow: Tests that take a while to run
-    project: Bakery Project tests
     config: Configuration tests
-    manifest: Manifest tests
     goss: Goss tool tests
     build: Docker buildx build tests
     bake: Docker buildx bake tests
-    schema: YAML schema tests
-    image: Image tests
-    snyk: Snyk tool tests
 
 bdd_features_base_dir = features/
