Add xdist group option to justfile test

--- a/posit-bakery/justfile
+++ b/posit-bakery/justfile
@@ -43,6 +43,7 @@ build:
 _pytest *ARGS:
     poetry run -- pytest \
         -n auto \
+        --dist loadgroup \
         --cov=posit_bakery \
         --cov-report=term-missing \
         {{ ARGS }} \
