Change test fixtures to return functions for fetching various resources

--- a/posit-bakery/test/pytest.ini
+++ b/posit-bakery/test/pytest.ini
@@ -11,5 +11,7 @@ markers =
     goss: Goss tool tests
     build: Docker buildx build tests
     bake: Docker buildx bake tests
+    disable_patch_revision: Disable revision patching for this test
+    disable_patch_datetime_now: Disable datetime.now patching for this test
 
 bdd_features_base_dir = features/
