Only pass IMAGE_VARIANT to dgoss tests
Previously we had been passing IMAGE_TYPE and IMAGE_VARIANT with the
same values for backward compatability.

Now that we are completely over to the bakery.yaml, we are using the
"Variant" nomenclature.

--- a/posit-bakery/test/resources/basic/test-image/1.0.0/test/goss.yaml
+++ b/posit-bakery/test/resources/basic/test-image/1.0.0/test/goss.yaml
@@ -4,4 +4,4 @@ package:
   curl:
     installed: true
   cmake:
-    installed: {{ if eq .Env.IMAGE_TYPE "Minimal" }}false{{ else }}true{{ end }}
+    installed: {{ if eq .Env.IMAGE_VARIANT "Minimal" }}false{{ else }}true{{ end }}
