Transfer assets from #143

--- a/posit-bakery/test/pytest.ini
+++ b/posit-bakery/test/pytest.ini
@@ -9,6 +9,7 @@ markers =
     slow: Tests that take a while to run
     config: Configuration tests
     dependency: Dependency tests
+    product_version: Product version tests
     goss: Goss tool tests
     build: Docker buildx build tests
     bake: Docker buildx bake tests
