--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -24,7 +24,7 @@ repos:
     -   id: no-commit-to-branch
         args: [--branch, main]
     -   id: pretty-format-json
-        exclude: "^.*testdata.*plan.json$"
+        exclude: "^.*testdata.*json$"
     -   id: requirements-txt-fixer
     -   id: trailing-whitespace
         exclude: "docs/_extensions"
