--- a/posit-bakery/pyproject.toml
+++ b/posit-bakery/pyproject.toml
@@ -22,6 +22,7 @@ dependencies = [
     "ruamel-yaml (>=0.18.14,<0.19.0)",
     "requests (>=2.32.5,<3.0.0)",
     "requests-cache (>=1.2.1,<2.0.0)",
+    "packaging (>=25.0,<26.0)",
 ]
 dynamic = ["version"]
 
