--- a/posit-bakery/test/resources/basic/bakery.yaml
+++ b/posit-bakery/test/resources/basic/bakery.yaml
@@ -19,10 +19,11 @@ registries:
 images:
   - name: "test-image"
     versions:
-      - name: "1.0.0"
+      - name: 1.0.0
         latest: true
         os:
-          - name: "Ubuntu 22.04"
+          - name: Ubuntu 22.04
+            primary: true
     variants:
       - name: "Minimal"
         extension: "min"
